# ise-533-hw1

./: .gitignore  Procfile  README  README.md  main.py  notes.md  pyproject.toml  requirements.txt  test.ipynb  visualization.py
data/: camm_county_mapping.csv  chen_adj_mat.csv  chen_ohio_pop_2010_2011.csv  oh-fips.csv  oh_adj.source  oh_county_list.csv  oh_county_pop_2021.csv  oh_pop_decennial.csv
explore/: bokeh.ipynb  folium.ipynb  model_1_pulp.ipynb  model_2_population.ipynb  pyomo_object_class_test.py  test.ipynb  visualize-plotly.ipynb
output/: solution_main_model_sol3.csv  solution_model_1_sol2.csv  solution_model_1_sol3.csv  solution_model_1_static.csv  solution_model_2_population.csv
src/: bokeh.ipynb  folium.ipynb  main.py  main_model.ipynb  model1.ipynb  model_1_pulp.ipynb  model_1_static.ipynb  model_2_population.ipynb  model_initial.ipynb  preprocess_data.py  test.ipynb  visualization.py  visualize-plotly.ipynb  visualize.ipynb  visualize.py  visualize_neighbours.py
