[tool.poetry]
name = "ise-533-hw1"
version = "0.1.0"
description = ""
authors = ["Adhithya Bhaskar <adhithyabhaskar@gmail.com>"]
readme = "README.md"
packages = [{include = "ise_533_hw1"}]

[tool.poetry.dependencies]
python = "^3.10"
pyomo = "^6.4.4"
jupyterlab = "^3.5.2"
ipykernel = "^6.20.1"
pandas = "^1.5.2"
black = {extras = ["jupyter"], version = "^22.12.0"}
shapely = "^2.0.0"
geopandas = "^0.12.2"
plotly = "^5.12.0"
pyshp = "^2.3.1"
plotly-geo = "^1.0.0"
folium = "^0.14.0"
matplotlib = "^3.6.3"
bokeh = "^3.0.3"
dash = "^2.7.1"
jupyter-dash = "^0.4.2"
streamlit = "^1.17.0"
pulp = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
